<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triage</string>
    <string name="action_settings">Settings</string>
    <string name="username_textview">Username:</string>
    <string name="pasword_textview">Password:</string>
    <string name="username_editText">Enter username</string>
    <string name="login_button1">Login!</string>
    <string name="title_activity_lobby">Looby</string>
    <string name="criticalListButtontext">Critical Patients</string>
    <string name="arrivalListButtontext">Arrival Patients</string>
    <string name="checkINbutton">Check In Patient</string>
    <string name="emptyER_textView"></string>
    <string name="title_activity_triage">Pateint</string>
    <string name="viewReport_button">View Patient Records</string>
    <string name="update_Button">Update Patient Report</string>
    <string name="title_activity_patient_form">New Patient Form</string>
    <string name="name_editText">Name</string>
    <string name="healthcardnum_editText">Health Card number</string>
    <string name="currentTime_editText">HH:MM:SS</string>
    <string name="dateofbirth_editText">Date of Birth (yyyy/mm/dd)</string>
    <string name="age_editText">age</string>
    <string name="vitals_textView">Vitals:</string>
    <string name="temperature_editText">Temp</string>
    <string name="diastolic_editText">diastolic</string>
    <string name="systolic_editText">systolic</string>
    <string name="heartrate_editText">Heart Rate</string>
    <string name="symptoms_textView">Symptoms:</string>
    <string name="symptoms_editText">enter symptoms</string>
    <string name="review_button">Check In and Save</string>
    <string name="error_textView"></string>
    <string name="invalid_textView"></string>
    <string name="nurseusername_textView1">hello!!!</string>
    <string name="title_activity_create_patient">CreatePatientActivity</string>
    <string name="textView1"></string>
    <string name="admit_button">Admit!</string>
    <string name="title_activity_view_er">ViewERActivity</string>
    <string name="title_activity_view_data">ViewDataActivity</string>
    <string name="viewData"></string>
    <string name="title_activity_update_report">UpdateReportActivity</string>
    <string name="currentTime_text">Current Time: </string>
    <string name="currentTime_edit">HH:MM:SS</string>
    <string name="vitals_text">Vitals: </string>
    <string name="temperature_edit">Temperature</string>
    <string name="diastolic_edit">Diastolic</string>
    <string name="systolic_edit">Systolic</string>
    <string name="heartRate_edit">HeartRate</string>
    <string name="symptoms_text1">Symptoms: </string>
    <string name="symptoms_edit">enter symptoms</string>
    <string name="updateReportandSave_Button">Update and Save new Report</string>
    <string name="remove_button">Remove Patient From ER and Database</string>
    <string name="seenby_button">Set Patient Seen By </string>
    <string name="invaildTextView1">Enter the values for time and signs you want to update</string>
    <string name="title_activity_seen_by_doctor">SeenByDoctorActivity</string>
    <string name="seenby_date">Date seen by Doctor: </string>
    <string name="seenby_time">Time seen by Doctor: </string>
    <string name="date_edit">YYYY/MM/DD</string>
    <string name="time_edit">HH:MM:SS</string>
    <string name="setSeenDT_button">Okay</string>
    <string name="invaildtext12"></string>
    <string name="title_activity_set_treated">SetTreatedActivity</string>
    <string name="outTime">Out Time: </string>
    <string name="timeEditView">HH:MM:SS</string>
    <string name="setTreated_button">Set Treated</string>
    <string name="inviald"></string>
    <string name="title_activity_physician_options">PhysicianOptionsActivity</string>
    <string name="viewAllData_buttonp">View all Patient Data</string>
    <string name="title_activity_physician_lobby">PhysicianLobbyActivity</string>
    <string name="title_activity_set_prescription">SetPrescriptionActivity</string>
    <string name="setPres_buttonp">Set Prescription</string>
    <string name="currentTime_textView">Current Time: </string>
    <string name="currentTimeP_editText">HH:MM:SS</string>
    <string name= "pName_textView">Prescription Name: </string>
    <string name="instruction_Textview"> Instructions: </string>
    <string name="setPres_button">Okay</string>
    <string name="invaildTextViewp"></string>

</resources>
