<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TriageActivity" >

    <Button
        android:id="@+id/viewReport_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:onClick="viewReport"
        android:text="@string/viewReport_button" />

    <Button
        android:id="@+id/update_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewReport_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="updateReport"
        android:text="@string/update_Button" />

    <Button
        android:id="@+id/seenby_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="setSeenByTimeAndDate"
        android:text="@string/seenby_button" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="removePatient"
        android:text="@string/remove_button" />

    <Button
        android:id="@+id/setTreated_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seenby_button"
        android:layout_below="@+id/seenby_button"
        android:layout_marginTop="18dp"
        android:text="@string/setTreated_button"
        android:onClick="setTreated" />

</RelativeLayout>
