<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LobbyActivity" >

    <Button
        android:id="@+id/criticalListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:text= "@string/criticalListButtontext"
        android:onClick="getCriticalList" />
 

	<Button
	    android:id="@+id/arrivalListButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="123dp"
	    android:text="@string/arrivalListButtontext"
	    android:onClick="getArrivalList"  />

	<Button
	    android:id="@+id/checkINbutton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/criticalListButton"
	    android:layout_centerVertical="true"
	    android:onClick="checkINPatient"
	    android:text="@string/checkINbutton" />

	<TextView
	    android:id="@+id/emptyER_textView"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/checkINbutton"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="65dp"
	    android:text="@string/emptyER_textView"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
