<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

     <EditText
         android:id="@+id/username_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/username_textview"
         android:layout_alignBottom="@+id/username_textview"
         android:layout_marginLeft="32dp"
         android:layout_toRightOf="@+id/username_textview"
         android:ems="10" 
         android:hint="@string/username_editText">

         <requestFocus />
     </EditText>

     <TextView
         android:id="@+id/username_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="72dp"
         android:text="@string/username_textview"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <TextView
         android:id="@+id/pasword_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/username_textview"
         android:layout_below="@+id/username_editText"
         android:layout_marginTop="23dp"
         android:text="@string/pasword_textview"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <EditText
         android:id="@+id/password_editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/pasword_textview"
         android:layout_alignBottom="@+id/pasword_textview"
         android:layout_alignLeft="@+id/username_editText"
         android:ems="10"
         android:inputType="textPassword" />

     <Button
         android:id="@+id/login_button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/password_editText"
         android:layout_below="@+id/password_editText"
         android:layout_marginTop="27dp"
         android:text="@string/login_button1" 
         android:onClick="loginUser"/>

     <TextView
         android:id="@+id/invalid_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/username_editText"
         android:layout_alignLeft="@+id/username_editText"
         android:layout_marginBottom="18dp"
         android:text="@string/invalid_textView" />

</RelativeLayout>
